# auto-split

./: CHANGELOG.md  README.md  TODO.md  auto-split.cabal  cabal.project  casex.cabal  ksplit.cabal
.github/workflows/: ci.yml
app/: Bar.hs  Foo.hs  Main.hs
src/: AutoSplit.hs  CaseX.hs  Ksplit.hs
src/AutoSplit/: Fields.hs  GhcFacade.hs  Pattern.hs  Shared.hs  Split.hs
src/CaseX/: GhcFacade.hs  Pattern.hs
src/Ksplit/: GhcFacade.hs
test/: Main.hs
test-modules/: Case1.hs.expected  Case1.hs.input  Case10.hs.expected  Case10.hs.input  Case11.hs.expected  Case11.hs.input  Case12.hs.expected  Case12.hs.input  Case13.hs.expected  Case13.hs.input  Case14.hs.expected  Case14.hs.input  Case15.hs.expected  Case15.hs.input  Case16.hs.expected  Case16.hs.input  Case17.hs.expected  Case17.hs.input  Case18.hs.expected  Case19.hs.input  Case2.hs  Case2.hs.expected  Case2.hs.input  Case3.hs  Case3.hs.expected  Case3.hs.input  Case4.hs.expected  Case4.hs.input  Case5.hs.expected  Case5.hs.input  Case6.hs.expected  Case6.hs.input  Case7.hs.expected  Case7.hs.input  Case8.hs.expected  Case8.hs.input  Case9.hs.expected  Case9.hs.input  Fields1.hs.expected  Fields1.hs.input  (+34 more)
