cabal-version:      3.0
name:               auto-split
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

tested-with: GHC == 9.12.1, GHC == 9.10.1, GHC == 9.8.2, GHC == 9.6.6

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutoSplit
                      AutoSplit.Pattern
    other-modules: AutoSplit.GhcFacade
    -- other-extensions:
    build-depends:    base >=4.18.1.0,
                      ghc >=9.6 && <9.13,
                      syb,
                      ghc-exactprint,
                      ghc-paths,
                      transformers
    hs-source-dirs:   src
    default-language: GHC2021

-- executable app
--     import:           warnings
--     build-depends:    base >=4.18.1.0,
--                       auto-split
--     hs-source-dirs:   app
--     default-language: GHC2021
--     ghc-options: -fplugin AutoSplit
--     main-is: Main.hs
--     default-extensions: LambdaCase

test-suite auto-split-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base,
        process,
        directory,
        tasty,
        tasty-hunit
