cabal-version:      3.0
name:               auto-split
version:            0.1.0.0
synopsis: Case splitting plugin
description: A GHC plugin that performs automatic case splitting
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  README.md
tested-with: GHC == 9.12.1, GHC == 9.10.1, GHC == 9.8.2, GHC == 9.6.6

source-repository head
  type: git
  location: https://github.com/aaronallen8455/auto-split

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutoSplit
                      AutoSplit.Pattern
    other-modules: AutoSplit.GhcFacade
    -- other-extensions:
    build-depends:    base <5,
                      ghc >=9.6 && <9.13,
                      syb <0.8,
                      ghc-exactprint <1.13,
                      ghc-paths <0.2,
                      transformers <0.7
    hs-source-dirs:   src
    default-language: GHC2021

test-suite auto-split-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base <5,
        process,
        directory,
        tasty,
        tasty-hunit
