cabal-version:      3.0
name:               test-modules
version:            0.1.0.0

common attrs
    ghc-options: -fplugin CaseX
    build-depends:    base,
                      casex
    hs-source-dirs:   .
    default-language: GHC2021
    default-extensions: LambdaCase

executable Case1
    import: attrs
    main-is: Case1.hs

executable Case2
    import: attrs
    main-is: Case2.hs

executable Case3
    import: attrs
    main-is: Case3.hs

executable Case4
    import: attrs
    main-is: Case4.hs

executable Case5
    import: attrs
    main-is: Case5.hs

executable LambdaCase1
    import: attrs
    main-is: LambdaCase1.hs

executable LambdaCases1
    import: attrs
    main-is: LambdaCases1.hs

executable LambdaCases2
    import: attrs
    main-is: LambdaCases2.hs

executable Fun1
    import: attrs
    main-is: Fun1.hs
    other-modules: Import
