cabal-version:      3.0
name:               test-modules
version:            0.1.0.0
extra-source-files:
  *.input
  *.expected

common attrs
    ghc-options: -fplugin AutoSplit
    build-depends:    base,
                      auto-split
    hs-source-dirs:   .
    default-language: GHC2021
    default-extensions: LambdaCase

executable Case1
    import: attrs
    main-is: Case1.hs

executable Case2
    import: attrs
    main-is: Case2.hs

executable Case3
    import: attrs
    main-is: Case3.hs

executable Case4
    import: attrs
    main-is: Case4.hs

executable Case5
    import: attrs
    main-is: Case5.hs

executable Case6
    import: attrs
    main-is: Case6.hs

executable Case7
    import: attrs
    main-is: Case7.hs

executable Case8
    import: attrs
    main-is: Case8.hs

executable Case9
    import: attrs
    main-is: Case9.hs
    other-modules: Import, Import2

executable Case10
    import: attrs
    main-is: Case10.hs
    other-modules: Import

executable Case11
    import: attrs
    main-is: Case11.hs
    other-modules: Import

executable Case12
    import: attrs
    main-is: Case12.hs
    other-modules: Import

executable Case13
    import: attrs
    main-is: Case13.hs

executable Case14
    import: attrs
    main-is: Case14.hs
    other-modules: Import

executable Case15
    import: attrs
    main-is: Case15.hs
    other-modules: Import

executable Case16
    import: attrs
    main-is: Case16.hs
    other-modules: Import

executable Case17
    import: attrs
    main-is: Case17.hs

executable Case18
    import: attrs
    main-is: Case18.hs

executable Case19
    import: attrs
    main-is: Case19.hs

executable LambdaCase1
    import: attrs
    main-is: LambdaCase1.hs

executable LambdaCase2
    import: attrs
    main-is: LambdaCase2.hs

executable LambdaCases1
    import: attrs
    main-is: LambdaCases1.hs

executable LambdaCases2
    import: attrs
    main-is: LambdaCases2.hs

executable LambdaCases3
    import: attrs
    main-is: LambdaCases3.hs

executable LambdaCases4
    import: attrs
    main-is: LambdaCases4.hs

executable Fun1
    import: attrs
    main-is: Fun1.hs
    other-modules: Import

executable Fun2
    import: attrs
    main-is: Fun2.hs
    other-modules: Import
                   Reexport

executable Fun3
    import: attrs
    main-is: Fun3.hs
    other-modules: Import

executable Fun4
    import: attrs
    main-is: Fun4.hs
    other-modules: Import

executable Fun5
    import: attrs
    main-is: Fun5.hs
    other-modules: Import

executable Fun6
    import: attrs
    main-is: Fun6.hs
    other-modules: Import
